--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,9 @@ services:
       - url=https://blog.nick.exposed
     image: ghost:2.31.1
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.routers.blogssl.rule=Host(`blog.nick.exposed`)"
-      - "traefik.http.routers.blogssl.entrypoints=websecure"
-      - "traefik.http.routers.blogssl.tls.certresolver=default"
       - "traefik.http.routers.blog.rule=Host(`blog.nick.exposed`)"
-      - "traefik.http.routers.blog.entrypoints=web"
-      - "traefik.http.routers.blog.middlewares=redirect-to-https"
+      - "traefik.http.routers.blog.entrypoints=websecure"
+      - "traefik.http.routers.blog.tls.certresolver=default"
     restart: always
     volumes:
       - /opt/ghost/content:/var/lib/ghost/content
@@ -21,31 +16,28 @@ services:
     container_name: dashboard
     image: ncpierson/nick.exposed:1.1.0
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.routers.dashssl.rule=Host(`nick.exposed`)"
-      - "traefik.http.routers.dashssl.entrypoints=websecure"
-      - "traefik.http.routers.dashssl.tls.certresolver=default"
       - "traefik.http.routers.dash.rule=Host(`nick.exposed`)"
-      - "traefik.http.routers.dash.entrypoints=web"
-      - "traefik.http.routers.dash.middlewares=redirect-to-https"
+      - "traefik.http.routers.dash.entrypoints=websecure"
+      - "traefik.http.routers.dash.tls.certresolver=default"
     restart: always
   proxy:
     command:
       - "--api.insecure=true"
       - "--certificatesresolvers.default.acme.httpchallenge=true"
       - "--certificatesresolvers.default.acme.httpchallenge.entrypoint=web"
-      # - "--certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
       - "--certificatesresolvers.default.acme.email=me@nick.exposed"
       - "--certificatesresolvers.default.acme.storage=acme.json"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--log.level=INFO"
       - "--providers.docker=true"
-      - "--providers.docker.exposedByDefault=false"
-      - "--providers.docker.watch=true"
     container_name: proxy
     image: traefik:v2.0
+    labels:
+      - "traefik.http.routers.http-catchall.rule=hostregexp(`{host:.+}`)"
+      - "traefik.http.routers.http-catchall.entrypoints=web"
+      - "traefik.http.routers.http-catchall.middlewares=redirect-to-https"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
     ports:
       - 80:80
       - 443:443
@@ -58,12 +50,7 @@ services:
     container_name: resume
     image: ncpierson/resume:1.0.0
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.routers.resumessl.rule=Host(`resume.nick.exposed`)"
-      - "traefik.http.routers.resumessl.entrypoints=websecure"
-      - "traefik.http.routers.resumessl.tls.certresolver=default"
       - "traefik.http.routers.resume.rule=Host(`resume.nick.exposed`)"
-      - "traefik.http.routers.resume.entrypoints=web"
-      - "traefik.http.routers.resume.middlewares=redirect-to-https"
+      - "traefik.http.routers.resume.entrypoints=websecure"
+      - "traefik.http.routers.resume.tls.certresolver=default"
     restart: always
