add soundoftext to deploy

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .gitsecret/keys/random_seed
 machine/nikki.zip
 acme.json
+soundoftext/soundoftext-api.env
 
 blog/content
+soundoftext/soundoftext.dump
+soundoftext/db
