--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,9 @@ services:
     restart: always
   fashionscape-api:
     container_name: fashionscape-api
-    image: ncpierson/fashionscape-api:0.3.2
+    environment:
+      - RUNESCAPE_VERSION=oldschool
+    image: ncpierson/fashionscape-api:0.5.1
     labels:
       - "traefik.http.routers.fashionscape-api.rule=Host(`api.scape.fashion`)"
       - "traefik.http.routers.fashionscape-api.entrypoints=websecure"
@@ -31,11 +33,30 @@ services:
     restart: always
   fashionscape-web:
     container_name: fashionscape-web
-    image: ncpierson/fashionscape-web:0.3.3
+    image: ncpierson/fashionscape-web:0.4.1
     labels:
       - "traefik.http.routers.fashionscape-web.rule=Host(`scape.fashion`)"
       - "traefik.http.routers.fashionscape-web.entrypoints=websecure"
       - "traefik.http.routers.fashionscape-web.tls.certresolver=default"
+    restart: always
+  fashionscape-rs3-api:
+    container_name: fashionscape-rs3-api
+    environment:
+      - RUNESCAPE_VERSION=runescape
+    image: ncpierson/fashionscape-api:0.5.1
+    labels:
+      - "traefik.http.routers.fashionscape-rs3-api.rule=Host(`api.rune.scape.fashion`)"
+      - "traefik.http.routers.fashionscape-rs3-api.entrypoints=websecure"
+      - "traefik.http.routers.fashionscape-rs3-api.tls.certresolver=default"
+      - "traefik.http.services.fashionscape-rs3-api.loadbalancer.server.port=8000"
+    restart: always
+  fashionscape-rs3-web:
+    container_name: fashionscape-rs3-web
+    image: ncpierson/fashionscape-web:0.4.1-runescape
+    labels:
+      - "traefik.http.routers.fashionscape-rs3-web.rule=Host(`rune.scape.fashion`)"
+      - "traefik.http.routers.fashionscape-rs3-web.entrypoints=websecure"
+      - "traefik.http.routers.fashionscape-rs3-web.tls.certresolver=default"
     restart: always
   isrebeccadope:
     container_name: isrebeccadope
