move to caddy, new server, disable foundry

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ blog/content
 soundoftext/
 foundry-ian/foundry
 foundry-ian/foundry.env
-foundry-nick/foundry
-foundry-nick/foundry.env
+foundry-flora/foundry
+foundry-flora/foundry.env
