--- a/Caddyfile
+++ b/Caddyfile
@@ -2,18 +2,14 @@
   email hello@flora.cool
 }
 
-api.scape.fashion {
-  reverse_proxy fashionscape-api:8000
+dnd.flora.cool {
+  reverse_proxy foundry:30000
 }
 
-api.rune.scape.fashion {
-  reverse_proxy fashionscape-api:8000
+truthordrink.flora.cool {
+  reverse_proxy truthordrink:80
 }
 
-flora.dnd.family {
-  reverse_proxy foundry-flora:30000
-}
-
-ian.dnd.family {
-  reverse_proxy foundry-ian:30000
+sheetfacts.flora.cool {
+  reverse_proxy sheetfacts:80
 }
